test/should-fail/缺少endif-3.j
function f takes nothing returns nothing
    if true then
        if true then
        endif
endfunction
